# json-forms-pdf

./: .gitignore  README.md  form.css  pdfforms.py  pyproject.toml  test-person.html  test_html.py  test_pdf.py
data/: definitions.yaml  schema-array.yaml  schema-complex.json  schema-group.json  schema-notifica.json  schema-notifica.yaml  schema-notifica.yml  schema-person.json  ui-array.yaml  ui-complex.json  ui-group.json  ui-group.yaml  ui-notifica.json  ui-notifica.yaml  ui-person.json  ui-simple.json
examples/: test-notifica.html
jsonforms-react-seed/: docker-compose.yml  package.json  webpack.config.js
jsonforms-react-seed/public/form-1/: schema.yaml  uischema.yaml
jsonforms-react-seed/src/: App.tsx  Markdown.tsx  index.css  index.tsx  markdownControlTester.js  schema-notifica.json  schema.json  ui-notifica.json  uischema.json  uischema.yaml
